Adding Portfolio Section

--- a/index.html
+++ b/index.html
@@ -50,17 +50,21 @@
                 <h2>Portfolio</h2>
             </div>
             <div class="content portfolio">
-                <div class="gridContainer">
-                    <a class="item" href="https://github.com/dansmith09/Band-Page-Module-4-" target="_blank">
-                        <div class="gridItem gridItem1">
-                            <h3>Red Hot Chili Peppers Fan Site</h3>
-                        </div>
-                    </a>
-                    <a class="item" href="https://dansmith09.github.io/PREWORK-Module-6-Watch-That-Box/" target="_blank"><div class="gridItem gridItem2"><h3>Grid Item</h3></div></a>
-                    <a class="item" href="https://dansmith09.github.io/PREWORK-Module-6-Watch-That-Box/" target="_blank"><div class="gridItem gridItem3"><h3>Grid Item</h3></div></a>
-                    <a class="item" href="https://dansmith09.github.io/PREWORK-Module-6-Watch-That-Box/" target="_blank"><div class="gridItem gridItem4"><h3>Grid Item</h3></div></a>
-                    <a class="item" href="https://dansmith09.github.io/PREWORK-Module-6-Watch-That-Box/" target="_blank"><div class="gridItem gridItem5"><h3>Grid Item</h3></div></a>
-                </div>
+                <a class="portfolioItem portfolioItem1" href="https://dansmith09.github.io/Cody-s-Emotions/" target="_blank">
+                    <h3>Cody's Emotions</h3>
+                </a>
+                <a class="portfolioItem portfolioItem2" href="https://dansmith09.github.io/PREWORK-Module-6-Watch-That-Box/" target="_blank">
+                    <h3>Watch That Box</h3>
+                </a>
+                <a class="portfolioItem portfolioItem3" href="https://github.com/dansmith09/Red-Hot-Chili-Peppers-Fan-Page" target="_blank">
+                    <h3>Red Hot Chili Peppers Fan Site</h3>
+                </a>
+                <a class="portfolioItem placeHolder" href="https://dansmith09.github.io/Place-Holder-Website/" target="_blank">
+                    <h3>Place holder</h3>
+                </a>
+                <a class="portfolioItem placeHolder" href="https://dansmith09.github.io/Place-Holder-Website/" target="_blank">
+                    <h3>Place Holder</h3>
+                </a>
             </div>
         </section>
         </section>
@@ -88,6 +92,7 @@
         <div class="headerSpace"></div>
     </main>
     <footer>
+        <p> Thanks for visiting!</p>
     </footer>
 </body>
 </html>
