--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <!-- Font Links End -->
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
-    <!-- Add a favicon :) -->
 </head>
 <body>
     <header>
@@ -20,10 +19,18 @@
         <img src="https://media.giphy.com/media/RlTBaAkpL6VbSp6o50/giphy.gif">
         <nav>
             <ul>
-                <li><a href="#aboutMe">About Me</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
-                <li><a href="#contactMe">Contact Me</a></li>
-                <li><a href="#resume">Resume</a></li>
+                <li>
+                    <a href="#aboutMe">About Me</a>
+                </li>
+                <li>
+                    <a href="#portfolio">Portfolio</a>
+                </li>
+                <li>
+                    <a href="#contactMe">Contact Me</a>
+                </li>
+                <li>
+                    <a href="#resume">Resume</a>
+                </li>
             </ul>
         </nav>
     </header>
@@ -67,17 +74,27 @@
                 </a>
             </div>
         </section>
-        </section>
         <div id="contactMe" class="headerSpace"></div>
         <section>
             <div class="sideTitle">
                 <h2>Contact Me</h2>
             </div>
             <div class="content contactMe">
-                    <div class="tile"><p>📞</p><a href="tel:0411168638">0411 168 638</a></div>
-                    <div class="tile"><p>✉️</p><a href="gday@dansmithdev.com.au">gday@dansmithdev.com.au</a></div>
-                    <div class="tile"><p>🌐</p><a href="www.dansmithdev.com.au" target="_blank">www.dansmithdev.com.au</a></div>
-                    <div class="tile"><p>🐦</p><a href="https://twitter.com/0xDanSmithDev" target="_blank">@0xDanSmithDev</a></div>
+                <div class="tile">
+                    <p>📞</p>
+                    <a href="tel:0411168638">0411 168 638</a>
+                </div>
+                <div class="tile">
+                       <p>✉️</p>
+                    <a href="gday@dansmithdev.com.au">gday@dansmithdev.com.au</a>
+                </div>
+                <div class="tile">
+                    <p>🌐</p><a href="www.dansmithdev.com.au" target="_blank">www.dansmithdev.com.au</a>
+                </div>
+                <div class="tile">
+                    <p>🐦</p>
+                    <a href="https://twitter.com/0xDanSmithDev" target="_blank">@0xDanSmithDev</a>
+                </div>
             </div>
         </section>
         <div id="resume" class="headerSpace"></div>
