--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <a class="portfolioItem portfolioItem2" href="https://dansmith09.github.io/PREWORK-Module-6-Watch-That-Box/" target="_blank">
                     <h3>Watch That Box</h3>
                 </a>
-                <a class="portfolioItem portfolioItem3" href="https://github.com/dansmith09/Red-Hot-Chili-Peppers-Fan-Page" target="_blank">
+                <a class="portfolioItem portfolioItem3" href="https://dansmith09.github.io/Red-Hot-Chili-Peppers-Fan-Page/" target="_blank">
                     <h3>Red Hot Chili Peppers Fan Site</h3>
                 </a>
                 <a class="portfolioItem placeHolder" href="https://dansmith09.github.io/Place-Holder-Website/" target="_blank">
